# spectral_firmware_rp

./: .gitmodules  CMakeLists.txt  README.md  definitions.h  interrupts.cpp  interrupts.h  main.cpp  tmc_com.cpp  tmc_com.h
mylib/: CMakeLists.txt
mylib/inc/: MyAccelStepper.h  controller.h  relay.h  tmc_com.h
mylib/src/: controller.cpp  myaccelstepper.cpp  relay.cpp  tmccom.cpp
test/: CMakeLists.txt  tmctest.cpp
